--- a/portfolio2023_vite/src/scss/pageTransition.scss
+++ b/portfolio2023_vite/src/scss/pageTransition.scss
@@ -2,7 +2,7 @@
 @import "./scss_global";
 
 .page-transition-container {
-  background: white;
+  background: #3a3a3a;
   transition: height 0.6s;
   z-index: 5000;
 }
