--- a/portfolio2023_vite/src/scss/introSection.scss
+++ b/portfolio2023_vite/src/scss/introSection.scss
@@ -2,17 +2,16 @@
 @import "./scss_global";
 
 .intro-section {
-  // background: var(--intro-grad-from);
-  // background: linear-gradient(
-  //   0deg,
-  //   var(--intro-grad-from) 30%,
-  //   var(--intro-grad-to) 100%
-  // );
+  padding-bottom: 0;
+
   .section-contents {
     @include sidePadding();
     padding-top: 20vh;
-    @media only screen and (min-width: 1024px) {
-      padding-top: 0;
+  }
+  @media only screen and (min-width: 1024px) {
+    padding-bottom: rem(240px);
+    .section-contents {
+      padding: 0;
     }
   }
 
@@ -22,7 +21,7 @@
 
     @media only screen and (min-width: 1024px) {
       height: 100vh;
-      --title-size: #{rem(320px)};
+      --title-size: #{rem(240px)};
     }
 
     .page-title {
