--- a/portfolio2023_vite/src/scss/cursor.scss
+++ b/portfolio2023_vite/src/scss/cursor.scss
@@ -20,13 +20,14 @@
     height: 8px;
     border-radius: 50%;
     background: var(--cursor);
-    opacity: 0.7;
+    // opacity: 0.7;
     transition: width var(--trans-time-cursor), height var(--trans-time-cursor);
   }
   &.link {
+    mix-blend-mode: overlay;
     .cursor {
-      width: 40px;
-      height: 40px;
+      width: 64px;
+      height: 64px;
     }
   }
   &.text {
