아이콘 개선

--- a/portfolio2023_vite/src/scss/_css_variable.scss
+++ b/portfolio2023_vite/src/scss/_css_variable.scss
@@ -127,7 +127,7 @@
     // btn
     --btn: #fff;
     --btn-hover-bg: #fff;
-    --btn-hover-contents: #555;
+    --btn-hover-contents: #3a3a3a;
 
     // scrollbar
     --scroll-thumb: rgba(90, 90, 90, 0.6);
