--- a/portfolio2023_vite/src/scss/btn.scss
+++ b/portfolio2023_vite/src/scss/btn.scss
@@ -17,9 +17,11 @@
   border: rem(2px) solid var(--btn);
   color: var(--btn);
   @include svgColor(var(--btn));
+  @include svgStroke(rem(1px), var(--btn));
   &.hover {
     background: var(--btn-hover-bg);
     color: var(--btn-hover-contents);
     @include svgColor(var(--btn-hover-contents));
+    @include svgStroke(rem(3px), var(--btn-hover-contents));
   }
 }
