--- a/portfolio2023_vite/src/scss/common.scss
+++ b/portfolio2023_vite/src/scss/common.scss
@@ -75,7 +75,7 @@ circle {
   overflow-y: overlay;
   &.fix-area {
     overflow: hidden;
-    .project-list {
+    .page-section {
       opacity: 0;
       pointer-events: none;
     }
@@ -83,7 +83,7 @@ circle {
 }
 
 html:not(.mobile) {
-  .scroll-container {
+  .custom-scrollbar {
     &::-webkit-scrollbar {
       width: 24px;
     }
@@ -122,7 +122,7 @@ html:not(.mobile) {
 
 .page-section {
   // background-color: var(--page-bg);
-  transition: $trans_bgColor;
+  transition: $trans_bgColor, $trans_opacity_expo;
   position: relative;
 
   &:not(.intro-section) {
