--- a/portfolio2023_vite/src/scss/_scss_global.scss
+++ b/portfolio2023_vite/src/scss/_scss_global.scss
@@ -3,6 +3,10 @@
   @return calc($px / $std * 1rem);
 }
 
+@function remRatio($px, $std: 25.6px) {
+  @return calc($px / $std);
+}
+
 $trans_color: color var(--trans-time-color);
 $trans_bgColor: background-color var(--trans-time-color);
 $trans_opacity: opacity var(--trans-time-move);
@@ -18,6 +22,10 @@ $trans_form_back: transform var(--trans-time-move) 0s var(--trans-func-back);
 
 @mixin sidePadding {
   padding: 0 rem(80px);
+}
+
+@mixin verticalPadding {
+  padding: rem(80px) 0;
 }
 
 @mixin aroundPadding {
