--- a/portfolio2023_vite/src/scss/projectDetails.scss
+++ b/portfolio2023_vite/src/scss/projectDetails.scss
@@ -102,6 +102,7 @@
   }
 
   .details-title-mobile-container {
+    z-index: 10;
     padding-top: rem(240px);
     padding-bottom: rem(160px);
     .details-title {
@@ -113,6 +114,7 @@
   }
 
   .details-btn-list {
+    z-index: 10;
     li {
       margin: 0 rem(40px) 0 0;
     }
@@ -153,6 +155,13 @@
         margin: 0 0 0 rem(40px);
       }
     }
+  }
+}
+
+.details-intro-bg {
+  z-index: 0;
+  img {
+    filter: blur(4px) brightness(0.8);
   }
 }
 
