--- a/portfolio2023_vite/src/scss/projectDetails.scss
+++ b/portfolio2023_vite/src/scss/projectDetails.scss
@@ -161,7 +161,20 @@
 .details-intro-bg {
   z-index: 0;
   img {
-    filter: blur(4px) brightness(0.8);
+    filter: blur(4px);
+  }
+  &:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: var(--page-bg);
+    background: var(--details-visual-grad);
+    opacity: 0.8;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
   }
 }
 
