프로젝트 상세 비주얼 모바일 보정

--- a/portfolio2023_vite/src/scss/pageTransition.scss
+++ b/portfolio2023_vite/src/scss/pageTransition.scss
@@ -1,8 +1,5 @@
 @import "./css_variable";
 @import "./scss_global";
 
-.page-transition-container {
-  background: #3a3a3a;
-  transition: height 0.6s;
-  z-index: 5000;
+.trans-container {
 }
