--- a/portfolio2023_vite/src/scss/projectDetails.scss
+++ b/portfolio2023_vite/src/scss/projectDetails.scss
@@ -32,6 +32,12 @@
 }
 
 .details-section {
+  &:not(.details-intro) {
+    & > * {
+      position: relative;
+      z-index: 10;
+    }
+  }
   @media only screen and (min-width: 1024px) {
     background-color: var(--details-bg);
   }
@@ -40,6 +46,7 @@
 .details-intro {
   padding-top: var(--header-height);
   padding-bottom: rem(160px);
+  // position: relative;
 
   @mixin categoryFont {
     line-height: rem(24px);
@@ -121,9 +128,11 @@
   }
 
   @media only screen and (min-width: 1024px) {
+    height: calc(100vh - var(--header-height));
     padding-top: 0;
     padding-bottom: rem(80px);
-    height: calc(100vh - var(--header-height));
+    position: static;
+
     @include gradBG();
     .page-category {
       span {
@@ -159,6 +168,7 @@
 }
 
 .details-intro-bg {
+  height: 50%;
   z-index: 0;
   img {
     filter: blur(4px);
@@ -170,11 +180,17 @@
     height: 100%;
     background: var(--page-bg);
     background: var(--details-visual-grad);
-    opacity: 0.8;
+    opacity: 0.9;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 2;
+  }
+  @media only screen and (min-width: 1024px) {
+    height: 100%;
+    &:after {
+      opacity: 0.8;
+    }
   }
 }
 
