--- a/portfolio2023_vite/src/scss/pageTransition.scss
+++ b/portfolio2023_vite/src/scss/pageTransition.scss
@@ -3,3 +3,106 @@
 
 .trans-container {
 }
+.trans-enter,
+.trans-exit {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 555;
+  transition: transform 1s;
+  .scroll-container {
+    overflow: hidden;
+  }
+}
+.trans-exit {
+  &:after {
+    content: "EXIT";
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 9999;
+    transform: translate(-50%, -50%);
+    font-size: 100px;
+    font-weight: 700;
+    color: white;
+  }
+  transform: translateX(0);
+}
+.trans-exiting {
+  transform: translateX(-100%);
+}
+.trans-enter {
+  &:after {
+    content: "ENTER";
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 9999;
+    transform: translate(-50%, -50%);
+    font-size: 100px;
+    font-weight: 700;
+    color: red;
+  }
+  transform: translateX(100%);
+}
+
+.trans-entering {
+  transform: translateX(0);
+}
+
+.trans-cover-container {
+  display: none;
+  z-index: 99999;
+  width: 1px;
+  height: 1px;
+  .trans-cover {
+    width: 0;
+    height: 0;
+    border-radius: 50%;
+    background: white;
+    transform: translate(-50%, -50%);
+    transition: all 1s;
+    overflow: hidden;
+    .trans-depth {
+      width: 0;
+      height: 0;
+      border-radius: 50%;
+      transform: translate(-50%, -50%);
+      transition: all 1s;
+    }
+    .trans-depth-1 {
+      background: orange;
+    }
+    .trans-depth-2 {
+      background: yellowgreen;
+    }
+  }
+  &.entering {
+    .trans-cover {
+      width: 300vw;
+      height: 300vw;
+      transition-delay: 0s;
+      .trans-depth {
+        width: 100%;
+        height: 100%;
+      }
+      .trans-depth-1 {
+        transition-delay: 0.2s;
+      }
+      .trans-depth-2 {
+        transition-delay: 0.4s;
+      }
+    }
+  }
+  &.entered {
+    transition-delay: 0.4s;
+    .trans-cover {
+      .trans-depth-1 {
+        transition-delay: 0.2s;
+      }
+      .trans-depth-2 {
+        transition-delay: 0s;
+      }
+    }
+  }
+}
