--- a/portfolio2023_vite/src/scss/pageTransition.scss
+++ b/portfolio2023_vite/src/scss/pageTransition.scss
@@ -9,49 +9,43 @@
   top: 0;
   left: 0;
   z-index: 555;
-  transition: transform 1s;
+  // transition: all 3s;
   .scroll-container {
     overflow: hidden;
+  }
+  &:after {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 9999;
+    transform: translate(-50%, -50%);
+    font-size: 100px;
+    font-weight: 700;
   }
 }
 .trans-exit {
   &:after {
     content: "EXIT";
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    z-index: 9999;
-    transform: translate(-50%, -50%);
-    font-size: 100px;
-    font-weight: 700;
     color: white;
   }
-  transform: translateX(0);
 }
 .trans-exiting {
-  transform: translateX(-100%);
 }
 .trans-enter {
   &:after {
     content: "ENTER";
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    z-index: 9999;
-    transform: translate(-50%, -50%);
-    font-size: 100px;
-    font-weight: 700;
     color: red;
   }
-  transform: translateX(100%);
+  opacity: 0;
 }
 
 .trans-entering {
-  transform: translateX(0);
+  opacity: 0;
 }
 
 .trans-cover-container {
-  display: none;
+  // display: none;
   z-index: 99999;
   width: 1px;
   height: 1px;
@@ -63,6 +57,7 @@
     transform: translate(-50%, -50%);
     transition: all 1s;
     overflow: hidden;
+    transition-delay: 0.3s;
     .trans-depth {
       width: 0;
       height: 0;
@@ -72,9 +67,11 @@
     }
     .trans-depth-1 {
       background: orange;
+      transition-delay: 0.2s;
     }
     .trans-depth-2 {
       background: yellowgreen;
+      transition-delay: 0s;
     }
   }
   &.entering {
@@ -91,17 +88,6 @@
       }
       .trans-depth-2 {
         transition-delay: 0.4s;
-      }
-    }
-  }
-  &.entered {
-    transition-delay: 0.4s;
-    .trans-cover {
-      .trans-depth-1 {
-        transition-delay: 0.2s;
-      }
-      .trans-depth-2 {
-        transition-delay: 0s;
       }
     }
   }
