--- a/portfolio2023_vite/src/scss/_css_variable.scss
+++ b/portfolio2023_vite/src/scss/_css_variable.scss
@@ -31,6 +31,10 @@
   --weight-bold: 900;
   --weight-black: 900;
 
+  // page transition
+  --trans-cover-bg: #fbdd72;
+  --trans-target: #3a3a3a;
+
   // scrollbar
   --scroll-thumb: rgba(26, 26, 26, 0.6);
 
@@ -145,6 +149,10 @@
     --btn: #fff;
     --btn-hover-bg: #fff;
     --btn-hover-contents: #3a3a3a;
+
+    // page transition
+    --trans-cover-bg: #20242b;
+    --trans-target: #fff;
 
     // scrollbar
     --scroll-thumb: rgba(90, 90, 90, 0.6);
