--- a/portfolio2023_vite/src/scss/pageTransition.scss
+++ b/portfolio2023_vite/src/scss/pageTransition.scss
@@ -47,47 +47,90 @@
 .trans-cover-container {
   // display: none;
   z-index: 99999;
-  width: 1px;
-  height: 1px;
-  .trans-cover {
-    width: 0;
-    height: 0;
-    border-radius: 50%;
-    background: white;
+  $targetSize: rem(120px);
+  .trans-target {
     transform: translate(-50%, -50%);
-    transition: all 1s;
-    overflow: hidden;
-    transition-delay: 0.3s;
-    .trans-depth {
+    color: var(--trans-target);
+    letter-spacing: -0.1em;
+    opacity: 1;
+    line-height: $targetSize;
+    font: {
+      size: $targetSize;
+      weight: var(--weight-medium);
+    }
+    span {
+      transform: translateY(100%);
+      transition: transform 0.4s var(--trans-func-expo);
+    }
+  }
+  &[type="slide"] {
+    .trans-cover {
+      height: 0;
+      top: 0;
+      background: var(--trans-cover-bg);
+      transition: height 0.6s var(--trans-func-expo);
+      transition-delay: 0.16s;
+    }
+    &.entering {
+      .trans-cover {
+        top: auto;
+        bottom: 0;
+        height: 100%;
+        transition-delay: 0;
+      }
+      .trans-target {
+        span {
+          transform: translateY(0);
+          transition-delay: 0.2s;
+        }
+      }
+    }
+  }
+  &[type="bubble"] {
+    width: 1px;
+    height: 1px;
+    .trans-cover {
       width: 0;
       height: 0;
       border-radius: 50%;
+      background: white;
       transform: translate(-50%, -50%);
       transition: all 1s;
-    }
-    .trans-depth-1 {
-      background: orange;
-      transition-delay: 0.2s;
-    }
-    .trans-depth-2 {
-      background: yellowgreen;
-      transition-delay: 0s;
-    }
-  }
-  &.entering {
-    .trans-cover {
-      width: 300vw;
-      height: 300vw;
-      transition-delay: 0s;
+      transition-delay: 0.3s;
       .trans-depth {
-        width: 100%;
-        height: 100%;
+        width: 0;
+        height: 0;
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        transition: all 1s;
       }
       .trans-depth-1 {
+        background: orange;
         transition-delay: 0.2s;
       }
       .trans-depth-2 {
-        transition-delay: 0.4s;
+        background: yellowgreen;
+        transition-delay: 0s;
+      }
+    }
+    &.entering {
+      .trans-target {
+        opacity: 1;
+      }
+      .trans-cover {
+        width: 300vw;
+        height: 300vw;
+        transition-delay: 0s;
+        .trans-depth {
+          width: 100%;
+          height: 100%;
+        }
+        .trans-depth-1 {
+          transition-delay: 0.2s;
+        }
+        .trans-depth-2 {
+          transition-delay: 0.4s;
+        }
       }
     }
   }
