인트로페이지 테스트중

--- a/portfolio2023_vite/src/scss/_css_variable.scss
+++ b/portfolio2023_vite/src/scss/_css_variable.scss
@@ -31,6 +31,10 @@
   --weight-bold: 900;
   --weight-black: 900;
 
+  // intro page
+  --intro-bg: #efefef;
+  --intro-text: #5a5a5a;
+
   // page transition
   --trans-cover-bg: #fbdd72;
   --trans-target: #3a3a3a;
