스크린 사이즈 대각선 길이로 페이지전환 너비 정의

--- a/portfolio2023_vite/src/scss/_css_variable.scss
+++ b/portfolio2023_vite/src/scss/_css_variable.scss
@@ -17,6 +17,7 @@
   --trans-time-move: var(--ms-800);
   --screen-size-x: 1920px;
   --screen-size-y: 927px;
+  --screen-pytha: 2133px;
   --root-font-size: 10px;
   --header-height: 208px;
   --footer-offset-y: 0px;
