--- a/portfolio2023_vite/src/scss/_css_variable.scss
+++ b/portfolio2023_vite/src/scss/_css_variable.scss
@@ -77,6 +77,7 @@
   // page visual
   --page-title-border: #a0a0a0;
   --page-title-filled: #3a3a3a;
+  --page-title-delay: 0s;
 
   // section header
   --section-header-title: #3a3a3a;
