--- a/portfolio2023_vite/src/scss/pageHeader.scss
+++ b/portfolio2023_vite/src/scss/pageHeader.scss
@@ -23,12 +23,13 @@
 }
 
 .gnb {
-  pointer-events: all;
   .gnb-btn {
     margin: 0 rem(20px);
     color: var(--gnb-menu);
     font-weight: var(--weight-medium);
     transition: $trans_color;
+    pointer-events: auto;
+    touch-action: manipulation;
     &.on {
       color: var(--gnb-menu-selected);
     }
@@ -40,7 +41,7 @@
 
 .util-item {
   margin-left: rem(24px);
-  pointer-events: all;
+  pointer-events: auto;
 }
 
 .util-btn {
