--- a/portfolio2023_vite/src/scss/pageTransition.scss
+++ b/portfolio2023_vite/src/scss/pageTransition.scss
@@ -54,12 +54,13 @@
 .trans-cover-container {
   // display: none;
   z-index: 99999;
-  $targetSize: rem(120px);
+  $targetSize: rem(160px);
   &[type="slide"] {
     .trans-target {
       height: #{$targetSize * 1.2};
       color: var(--trans-target);
-      letter-spacing: -0.1em;
+      // letter-spacing: -0.1em;
+      letter-spacing: 0.1em;
       font: {
         size: $targetSize;
         weight: var(--weight-medium);
@@ -69,7 +70,6 @@
         line-height: $targetSize;
         top: 100%;
         left: rem(80px);
-        transition: top 0.4s;
       }
     }
     .trans-cover {
@@ -88,6 +88,7 @@
       .trans-target {
         span {
           top: 0;
+          transition: top 0.4s;
           transition-delay: 0.2s;
         }
       }
@@ -99,6 +100,7 @@
       .trans-target {
         span {
           top: 100%;
+          transition: none;
           animation: slidePageIn 0.4s;
         }
       }
